--- a/templates/admin/shop.html.twig
+++ b/templates/admin/shop.html.twig
@@ -12,21 +12,140 @@
 {% block main %}
     <section class="">
         <div id="ico">
-            <div class="element"><img class="titre logoBig" href="{{ path('shops') }}" src="{{ asset('icon/shops_titre.png') }}" alt="shops"></div>
-            <div class="element"><img class="title logoBig" href="{{ path('shops') }}" src="{{ asset('icon/shops.png') }}" alt="shops-icon"></div>
+            <div class="element"><img class="titre logoBig" href="{{ path('admin_shops') }}" src="{{ asset('icon/shops_titre.png') }}" alt="shops"></div>
+            <div class="element"><img class="title logoBig" href="{{ path('admin_shops') }}" src="{{ asset('icon/shops.png') }}" alt="shops-icon"></div>
         </div>
         <div class="line"></div>
         <div class="">
-            <form>
-                <div id="divSearch">
-                    <div class="btn logo"><label for="userId"><img src="{{ asset('icon/loupe.png') }}" alt="loupe"></label></div>
-                    <div class="btn"><input type="text" id="userId" name="userId" placeholder="Ville, Code postal"></div>
-                    {% block search %}{% endblock search %}
-                </div>
+            <form action="{{ path('admin_search_shops') }}">
+                <article class="detail">
+                    <div class="card-text" id="divSearch">
+                        <div class="btn logo icon"><label for="userId"><img src="{{ asset('icon/loupe.png') }}" alt="loupe"></label>
+                        </div>
+                        <div class="btn"><input type="text" id="userId" name="query" placeholder="Ville, Code postal">
+                        </div>
+                        {% block search %}{% endblock search %}
+                    </div>
+                </article>
             </form>
         </div>
         <div class="line">
         </div>
+        <article class="card-detail">
+            <div class="card-title"><h1>{{ shop.title }}</h1><br></div>
+        </article>
+        <article class="card-address">
+            <div class="card-title"><h2>{{ shop.address }} {{ shop.town }}</h2></div>
+        </article>
+        <article class="detail">
+            <div class="card-text">
+                <div class="" id="tm">
+                    <div class="" id="tmbk">
+                        <div id="abs1" class="absolute">
+                            <b><img class="left logoBig resp arrow-left" src="{{ asset('icon/fleche_droite.png') }}" alt="Preview">
+                            </b><br />
+                        </div>
+                        <div id="abs2" class="absolute">
+                            <b>
+                                <img class="arrow-right right logoBig resp" src="{{ asset('icon/fleche_droite.png') }}" alt="Next">
+                            </b>
+                            <br />
+                        </div>
+                        <div id="sta1" class="static">
+                            <b>
+                                <img class="img-card" src="{{ asset('uploads/cover/'~shop.coverFilename) }}" alt="photo-shop">
+                            </b><br />
+                        </div>
+                    </div>
+                    <div class="image">
+                        <table>
+                            <tr>
+                                <td>Lundi</td>
+                                <td></td>
+                            </tr>
+                            <tr>
+                                <td>fermé</td>
+                                <td></td>
+                            </tr>
+                            <tr>
+                                <td>Mardi</td>
+                                <td></td>
+                            </tr>
+                            <tr>
+                                <td> 14:00 - </td>
+                                <td>21:00</td>
+                            </tr>
+                            <tr>
+                                <td>Mercredi</td>
+                            </tr>
+                            <tr>
+                                <td> 14:00 - </td>
+                                <td> 19:00</td>
+                            </tr>
+                            <tr>
+                                <td>Jeudi</td>
+                            </tr>
+                            <tr>
+                                <td> 14:00 - </td>
+                                <td>21:00</td>
+                            </tr>
+                            <tr>
+                                <td>Vendredi</td>
+                            </tr>
+                            <tr>
+                                <td> 14:00 - </td>
+                                <td>21:00</td>
+                            </tr>
+                            <tr>
+                                <td>Samedi</td>
+                            </tr>
+                            <tr>
+                                <td> 14:00 - </td>
+                                <td> 19:00</td>
+                            </tr>
+                            <tr>
+                                <td>Dimanche</td>
+                            </tr>
+                            <tr>
+                                <td> 14:00 - </td>
+                                <td> 19:00</td>
+                            </tr>
+                        </table>
+                    </div>
+                </div>
+            </div>
+            <div class="card-text">
+                <div class="list">
+                    <ul id="abs4" class="absolute indicators ">
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                </div>
+            </div>
+        </article>
+        <article class="detail">
+            <div class="card-text">
+                <div class="justifyBox">
+                    <p>{{ shop.description }}{{ shop.description }}</p>
+                </div>
+                <div>
+                    <ul class="adm-btn">
+                        <li><a id="link3" class="pad5" href="{{ path('admin_shop_update', {"id": shop.id}) }}"><img src="{{ asset('icon/edit-pink.png') }}" alt="Modifier un shop"><br><h4>Modifier un shop</h4></a></li>
+                        <li><a id="link4" class="pad5" href="{{ path('admin_shop_delete', {"id": shop.id}) }}"><img src="{{ asset('icon/delete-orange.png') }}" alt="Supprimer le shop"><br><h4>Supprimer le shop</h4></a></li>
+                        <li><a id="link2" class="pad5" href="{{ path('admin_shop_create', {"id": shop.id}) }}"><img src="{{ asset('icon/add-file-green.png') }}" alt="Créer un shop"><br><h4>Créer un shop</h4></a></li>
+                    </ul>
+                </div>
+
+            </div>
+            <div class="card-text">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2828.6974937602668!2d-0.5611412842345931!3d44.84809358236132!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd55262a0604501b%3A0x57782374d796fd66!2sHangar%20Darwin%20Skatepark!5e0!3m2!1sfr!2sfr!4v1650801288770!5m2!1sfr!2sfr" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+            </div>
+        </article>
+        <!--<div class="card" style="border:solid 2px darkblue;"><img class="car" src="{{ asset('uploads/darwin-cover.jpg') }}" alt="map" style="width:100%;"></div>-->
+        {#  {% for club in skatepark.clubs %}<p>{{ club.f }}</p>{% endfor %} #}
+        {#  {% if club.skatepark %}<h3>{{ club.skatepark.town }} {{ club.skatepark.area }}</h3>{% endif %} #}
     </section>
     <section class="section">
         <article class="book-detail">
