--- a/templates/admin/skateparks.html.twig
+++ b/templates/admin/skateparks.html.twig
@@ -3,6 +3,7 @@
 {% block stylesheets %}
     <link rel="stylesheet" href="{{ asset('css/details.css') }}">
     <link rel="stylesheet" href="{{ asset('css/burger.css') }}">
+    <link rel="stylesheet" href="{{ asset('css/search.css') }}">
 {% endblock stylesheets %}
 
 {% block metatitle %}
@@ -20,18 +21,23 @@
             <div class="">
                 {% block search %}
                     <form action="{{ path('admin_search_skateparks') }}">
-                        <article class="detail">
-                            <div class="card-text" id="divSearch">
-                                <div class="btn logo icon"><label for="userId"><img src="{{ asset('icon/loupe.png') }}" alt="loupe"></label>
-                                </div>
-                                <div class="btn"><input type="text" id="userId" name="query" placeholder="Ville, Code postal">
-                                </div>
+                        <div id="divSearch">
+                            <div class="btn logo icon">
+                            <label for="userId">
+                                <img src="{{ asset('icon/loupe.png') }}" alt="loupe">
+                            </label>
                             </div>
-                        </article>
+                            <div class="btn">
+                                <input type="text" id="userId" name="query" placeholder="Ville, Code postal">
+                            </div>
+                            <input type="submit">
+                        </div>
                     </form>
                 {% endblock search %}
             </div>
-        <div class="line"></div>
+            <div class="line">
+            </div>
+        </div>
     </section>
     <section class="section">
         <article class="book-detail">
@@ -43,23 +49,32 @@
         </article>
     </section>
     <section class="section">
+        <h3 class="al"> Aller à :</h3>
         {% for skatepark in skateparks %}
-            <div class="card">
-                <div class="card-text">
+            <div class="card-text">
+                <div class="card-t">
                     <h1>{{ skatepark.title }}</h1>
-                    {#  <img src="{{ asset('uploads/cover/'~club.coverFilename) }}" alt=""> #}
-                        <h2>{{ skatepark.description}}</h2>
-                        <h3>{{ skatepark.town}}</h3>
-                        <h3>{{ skatepark.area}}</h3>
-                    {#             {% if skatepark.club %} #}
-                    {#                        <h3>{{ skatepark.club.town }} {{ skatepark.club.area }}</h3> #}
-                    {#                    {% endif %} #}
                 </div>
-                <a class="link" href="{{ path('admin_skatepark', {"id": skatepark.id}) }}">Voir le skatepark</a>
-                <a class="link" href="{{ path('admin_skatepark_create', {"id": skatepark.id}) }}">Créer un skatepark</a>
-                <a class="link" href="{{ path('admin_skatepark_update', {"id": skatepark.id}) }}">Modifier le skatepark</a>
-                <a class="link" href="{{ path('admin_skatepark_delete', {"id": skatepark.id}) }}">Supprimer le skatepark</a>
+                <div id="abs5" class="absolute ban" alt="banner-address">
+                    <h2>{{ skatepark.address}} {{ skatepark.town}}</h2>
+                </div>
+                <div id="sta1" class="static">
+                    <b>
+                        <img class="img-card" src="{{ asset('uploads/cover/'~skatepark.coverFilename) }}" alt="photo-skatepark">
+                    </b>
+                </div>
+
+                {#             {% if skatepark.club %} #}
+                {#                        <h3>{{ skatepark.club.town }} {{ skatepark.club.area }}</h3> #}
+                {#                    {% endif %} #}
+
             </div>
+            <ul class="adm-btn">
+                <li><a id="link1" class="pad5" href="{{ path('admin_skatepark', {"id": skatepark.id}) }}"><img src="{{ asset('icon/open-blue.png') }}" alt="Voir le skatepark"><br><h4>Voir le skatepark</h4></a></li>
+                <li><a id="link2" class="pad5" href="{{ path('admin_skatepark_create', {"id": skatepark.id}) }}"><img src="{{ asset('icon/add-file-green.png') }}" alt="Créer un skatepark"><br><h4>Créer un skatepark</h4></a></li>
+                <li><a id="link3" class="pad5" href="{{ path('admin_skatepark_update', {"id": skatepark.id}) }}"><img src="{{ asset('icon/edit-pink.png') }}" alt="Modifier un skatepark"><br><h4>Modifier un skatepark</h4></a></li>
+                <li><a id="link4" class="pad5" href="{{ path('admin_skatepark_delete', {"id": skatepark.id}) }}"><img src="{{ asset('icon/delete-orange.png') }}" alt="Supprimer le skatepark"><br><h4>Supprimer le skatepark</h4></a></li>
+            </ul>
         {% endfor %}
     </section>
 {% endblock main%}
